--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-Flask==0.10.1
-Jinja2==2.7.2
-MarkupSafe==0.18
-PyYAML==3.11
-Werkzeug==0.9.4
-argparse==1.2.1
-itsdangerous==0.23
-wsgiref==0.1.2
+Flask
+PyYAML
+Cython
+MagicMemoryView
