--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ python:
     - "3.3"
 
 install:
-    # Install (specific) requirements
+    # Install stuff for running test suite
+    - "pip install nose coverage"
+    # Install (specific) requirements and ourself
     - "pip install -r requirements.txt"
+
+# Run tests
+script: "nosetests"
