travis: invoke nosetests with coverage output

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
     - "pip install -r requirements.txt"
 
 # Run tests
-script: "nosetests"
+script: "nosetests --with-coverage --cover-package=ruaumoko"
