--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
     - "3.3"
 
 install:
+    # Install coveralls (coverage support for travis)
+    - "pip install coveralls"
     # Install (specific) requirements and ourself
     - "pip install -r requirements.txt"
     # Install stuff for running test suite
@@ -12,3 +14,7 @@ install:
 
 # Run tests
 script: "nosetests --with-coverage --cover-package=ruaumoko"
+
+after_success:
+    # Update code-coverage information on coveralls.io
+    - "coveralls"
